--- a/src/template.yaml
+++ b/src/template.yaml
@@ -61,6 +61,7 @@ Resources:
       TemplateURL: ./lambda-functions/lambda-functions.yaml
       Parameters:
         StageName: !Ref StageName
+        AppName: !Sub ${AppName}
         UserPoolArn: !GetAtt InfrastructureStack.Outputs.CognitoUserPoolArn
         DBHost: !Ref DBHost
         Database: !Ref Database
