--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: "AWS::Serverless-2016-10-31"
-Description: "intergreated to resource dynamodb."
+Description: "Integrated to resource dynamodb."
 
 Parameters:
   StageName:
@@ -45,34 +45,38 @@ Resources:
         Authorizers:
           MyCognitoAuthorizer:
             UserPoolArn: !Ref UserPoolArn
-
-  WaitingRoomResource:
-    Type: "AWS::ApiGateway::Resource"
-    Properties:
-      RestApiId: !Ref Api
-      ParentId: !GetAtt Api.RootResourceId
-      PathPart: "waiting-room"
-
-  Post:
-    Type: "AWS::ApiGateway::Method"
-    Properties:
-      RestApiId: !Ref Api
-      ResourceId: !Ref WaitingRoomResource
-      HttpMethod: POST
-      Integration:
-        Type: AWS
-        Credentials: !GetAtt APIGatewayIntegreatedRole.Arn
-        IntegrationHttpMethod: POST
-        Uri: !Sub "arn:aws:apigateway:${AWS::Region}:dynamodb:action/PutItem"
-        PassthroughBehavior: WHEN_NO_TEMPLATES
-        RequestTemplates:
-          application/json:
-            {
-              "Fn::Sub": '{"TableName":"${TableName}","Item":{"type":{"S":"$input.path(''$.type'')"},"epoch":{"S":"$input.path(''$.epoch'')"},"info":{"S":"$input.path(''$.info'')"}}}',
-            }
-        IntegrationResponses:
-          - StatusCode: "200"
-            ResponseTemplates:
-              application/json: "{}"
-      MethodResponses:
-        - StatusCode: "200"
+      DefinitionBody:
+        swagger: "2.0"
+        info:
+          title: !Ref AppName
+        paths:
+          /waiting-room:
+            post:
+              x-amazon-apigateway-integration:
+                type: "aws"
+                credentials: !GetAtt APIGatewayIntegreatedRole.Arn
+                httpMethod: "POST"
+                uri: !Sub "arn:aws:apigateway:${AWS::Region}:dynamodb:action/PutItem"
+                passthroughBehavior: "WHEN_NO_TEMPLATES"
+                requestTemplates:
+                  application/json:
+                    "Fn::Sub": '{"TableName":"${TableName}","Item":{"type":{"S":"$input.path(''$.type'')"},"epoch":{"S":"$input.path(''$.epoch'')"},"info":{"S":"$input.path(''$.info'')"}}}'
+                responses:
+                  default:
+                    statusCode: "200"
+                    responseTemplates:
+                      application/json: "{}"
+              responses:
+                "200":
+                  description: "200 response"
+              security:
+                - MyCognitoAuthorizer: []
+        securityDefinitions:
+          MyCognitoAuthorizer:
+            type: "apiKey"
+            name: "Authorization"
+            in: "header"
+            x-amazon-apigateway-authorizer:
+              type: "cognito_user_pools"
+              providerARNs:
+                - !Ref UserPoolArn
