--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -105,7 +105,8 @@ jobs:
             --s3-bucket ${DEV_ARTIFACTS_BUCKET} \
             --no-fail-on-empty-changeset \
             --role-arn ${DEV_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides StageName=${DEV_STACK_NAME}
+            --parameter-overrides StageName=${DEV_STACK_NAME} \
+            --no-rollback
 
   build-and-package:
     if: github.ref == 'refs/heads/main'
@@ -198,7 +199,8 @@ jobs:
             --region ${DEV_REGION} \
             --s3-bucket ${DEV_ARTIFACTS_BUCKET} \
             --no-fail-on-empty-changeset \
-            --role-arn ${DEV_CLOUDFORMATION_EXECUTION_ROLE}
+            --role-arn ${DEV_CLOUDFORMATION_EXECUTION_ROLE} \
+            --no-rollback
 
   integration-test:
     if: github.ref == 'refs/heads/main' && startsWith(github.event.head_commit.message, 'prod')
@@ -245,4 +247,5 @@ jobs:
             --s3-bucket ${PROD_ARTIFACTS_BUCKET} \
             --no-fail-on-empty-changeset \
             --role-arn ${PROD_CLOUDFORMATION_EXECUTION_ROLE} \
-            --parameter-overrides StageName=${PROD_STACK_NAME}
+            --parameter-overrides StageName=${PROD_STACK_NAME} \
+            --no-rollback
