--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -49,8 +49,9 @@ Resources:
         swagger: "2.0"
         info:
           title: !Ref AppName
+        basePath: /waiting-room
         paths:
-          /waiting-room:
+          /:
             post:
               x-amazon-apigateway-integration:
                 type: "aws"
@@ -61,27 +62,19 @@ Resources:
                 requestTemplates:
                   application/json:
                     "Fn::Sub": '{"TableName":"${TableName}","Item":{"type":{"S":"$input.path(''$.type'')"},"epoch":{"N":"$input.path(''$.epoch'')"},"info":{"S":"$util.escapeJavaScript($input.path(''$.info''))"}}}'
-                responses:
-                  default:
-                    statusCode: "200"
-                    responseTemplates:
+                # responses:
+                #   default:
+                #     statusCode: "200"
+                #     responseTemplates:
+                #       application/json: "{}"
+                IntegrationResponses:
+                  - StatusCode: "200"
+                    ResponseTemplates:
                       application/json: "{}"
-              # responses:
-              #   "200":
-              #     description: "200 response"
-              responses:
-                default:
-                  statusCode: "200"
-                  responseTemplates:
-                    application/json: "{}"
-                ".*":
-                  statusCode: "400"
-                  responseTemplates:
-                    application/json: '{"error":"An error occurred"}'
               security:
                 - MyCognitoAuthorizer: []
 
-          /waiting-room/{time-start}/{time-end}:
+          /{time-start}/{time-end}:
             get:
               x-amazon-apigateway-integration:
                 type: "aws"
@@ -100,13 +93,14 @@ Resources:
                       ":timeEnd": {"N": "$input.params(''time-end'')"}
                       }
                       }'
-                responses:
-                  default:
-                    statusCode: "200"
-                  ".*":
-                    statusCode: "400"
-                    responseTemplates:
-                      application/json: '{"error":"An error occurred"}'
+                IntegrationResponses:
+                  - StatusCode: "200"
+                    ResponseTemplates:
+                      # Modify the response of the DynamoDB Query before sending back to the caller
+                      # Using single-line Velocity Template Language (VTL) code as the mapping template
+                      # \n represents a new line, \t represents a tab character, \" represents a single quote character
+                      # Example response: {"music":[{"id":"38bfb57e-a5a8-4fed-9a4f-391d66d5e987","artist":"The Beatles","album":"Abbey Road"}]}
+                      application/json: "#set($inputRoot = $input.path('$'))\n{\n\t\"waiting-room\": [\n\t\t#foreach($field in $inputRoot.Items) {\n\t\t\t\"type\": \"$field.type.S\",\n\t\t\t\"epoch\": \"$field.epoch.N\",\n\t\t\t\"info\": \"$field.infor.S\"\n\t\t}#if($foreach.hasNext),#end\n\t\t#end\n\t]\n}"
               security:
                 - MyCognitoAuthorizer: []
         securityDefinitions:
