--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -49,19 +49,19 @@ Resources:
   #     ProviderARNs:
   #       - !Ref UserPoolArn
 
-  WaitingRoomResource:
-    Type: "AWS::ApiGateway::Resource"
-    Properties:
-      RestApiId: !Ref Api
-      ParentId: !GetAtt Api.RootResourceId
-      PathPart: "waiting-room"
+  # WaitingRoomResource:
+  #   Type: "AWS::ApiGateway::Resource"
+  #   Properties:
+  #     RestApiId: !Ref Api
+  #     ParentId: !GetAtt Api.RootResourceId
+  #     PathPart: "waiting-room"
 
   GetWaitingRoomResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
       RestApiId: !Ref Api
-      ParentId: !Ref WaitingRoomResource
-      PathPart: "{start-time}/{end-time}"
+      ParentId: !GetAtt Api.RootResourceId
+      PathPart: "waiting-room/{start-time}/{end-time}"
 
   WaittingRoomMethodGet:
     Type: "AWS::ApiGateway::Method"
