--- a/src/integrated-resource/waiting-room.yaml
+++ b/src/integrated-resource/waiting-room.yaml
@@ -34,6 +34,15 @@ Resources:
                 Action:
                   - "dynamodb:*"
                 Resource: "*"
+  InteCognitoAuthorizer:
+    Type: AWS::ApiGateway::Authorizer
+    Properties:
+      Name: InteCognitoAuthorizer
+      Type: COGNITO_USER_POOLS
+      RestApiId: !Ref Api
+      IdentitySource: method.request.header.Authorization
+      ProviderARNs:
+        - !Ref UserPoolArn
 
   Api:
     Type: "AWS::ApiGateway::RestApi"
@@ -68,7 +77,7 @@ Resources:
       ResourceId: !Ref EndTimeResource
       HttpMethod: GET
       AuthorizationType: COGNITO_USER_POOLS
-      AuthorizerId: MyCognitoAuthorizer
+      AuthorizerId: !Ref MyCognitoAuthorizer
       RequestParameters:
         method.request.path.start-time: true
         method.request.path.end-time: true
